--- a/frontend_set1/src/App.css
+++ b/frontend_set1/src/App.css
@@ -1,4 +1,4 @@
-/* 
+
   .todo-app {
     max-width: 600px;
     margin: 0 auto;
@@ -143,4 +143,4 @@
     text-align: center;
     color: #666;
     padding: 20px;
-  } */
+  } 
